exports[`no-duplicate-plan > invalid(1): import test from 'node:test';\ntest(\"x\", t => { t.plan(1); t.plan(2); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", t => { t.plan(1); t.plan(2); });

`;

exports[`no-duplicate-plan > invalid(1): import test from 'node:test';\ntest(\"x\", t => { t.plan(1); t.plan(2); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("x", t => { t.plan(1); t.plan(2); });
    |                             ^^^^^^^^^ Do not call \`t.plan()\` more than once in the same test.

`;

exports[`no-duplicate-plan > invalid(10): import test from 'node:test';\ntest(\"parent\", t => { t.test(\"child\", child => { child.plan(1); child.plan(2); }); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("parent", t => { t.test("child", child => { child.plan(1); child.plan(2); }); });

`;

exports[`no-duplicate-plan > invalid(10): import test from 'node:test';\ntest(\"parent\", t => { t.test(\"child\", child => { child.plan(1); child.plan(2); }); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("parent", t => { t.test("child", child => { child.plan(1); child.plan(2); }); });
    |                                                                 ^^^^^^^^^^^^^ Do not call \`child.plan()\` more than once in the same test.

`;

exports[`no-duplicate-plan > invalid(11): import test from 'node:test';\ntest(\"parent\", t => { t.test.only(\"child\", child => { child.plan(1); child.plan(2); }); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("parent", t => { t.test.only("child", child => { child.plan(1); child.plan(2); }); });

`;

exports[`no-duplicate-plan > invalid(11): import test from 'node:test';\ntest(\"parent\", t => { t.test.only(\"child\", child => { child.plan(1); child.plan(2); }); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("parent", t => { t.test.only("child", child => { child.plan(1); child.plan(2); }); });
    |                                                                      ^^^^^^^^^^^^^ Do not call \`child.plan()\` more than once in the same test.

`;

exports[`no-duplicate-plan > invalid(12): import test from 'node:test';\ntest(\"parent\", t => { t.plan(1); t.test(\"child\", child => { t.plan(2); }); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("parent", t => { t.plan(1); t.test("child", child => { t.plan(2); }); });

`;

exports[`no-duplicate-plan > invalid(12): import test from 'node:test';\ntest(\"parent\", t => { t.plan(1); t.test(\"child\", child => { t.plan(2); }); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("parent", t => { t.plan(1); t.test("child", child => { t.plan(2); }); });
    |                                                             ^^^^^^^^^ Do not call \`t.plan()\` more than once in the same test.

`;

exports[`no-duplicate-plan > invalid(13): import test from 'node:test';\ntest(\"x\", (t: any) => { t.plan(1); t.plan(2); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", (t: any) => { t.plan(1); t.plan(2); });

`;

exports[`no-duplicate-plan > invalid(13): import test from 'node:test';\ntest(\"x\", (t: any) => { t.plan(1); t.plan(2); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("x", (t: any) => { t.plan(1); t.plan(2); });
    |                                    ^^^^^^^^^ Do not call \`t.plan()\` more than once in the same test.

`;

exports[`no-duplicate-plan > invalid(14): import test from 'node:test';\n(test as any)(\"x\", (t: any) => { t.plan(1); t.plan(2); }); 1`] = `

  1 | import test from 'node:test';
  2 | (test as any)("x", (t: any) => { t.plan(1); t.plan(2); });

`;

exports[`no-duplicate-plan > invalid(14): import test from 'node:test';\n(test as any)(\"x\", (t: any) => { t.plan(1); t.plan(2); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | (test as any)("x", (t: any) => { t.plan(1); t.plan(2); });
    |                                             ^^^^^^^^^ Do not call \`t.plan()\` more than once in the same test.

`;

exports[`no-duplicate-plan > invalid(15): import test from 'node:test';\ntest(\"x\", (t: any) => { (t as any).plan(1); (t as any).plan(2); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", (t: any) => { (t as any).plan(1); (t as any).plan(2); });

`;

exports[`no-duplicate-plan > invalid(15): import test from 'node:test';\ntest(\"x\", (t: any) => { (t as any).plan(1); (t as any).plan(2); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("x", (t: any) => { (t as any).plan(1); (t as any).plan(2); });
    |                                             ^^^^^^^^^^^^^^^^^^ Do not call \`t.plan()\` more than once in the same test.

`;

exports[`no-duplicate-plan > invalid(16): import test from 'node:test';\ntest(\"x\", (t: any) => { t!.plan(1); t!.plan(2); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", (t: any) => { t!.plan(1); t!.plan(2); });

`;

exports[`no-duplicate-plan > invalid(16): import test from 'node:test';\ntest(\"x\", (t: any) => { t!.plan(1); t!.plan(2); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("x", (t: any) => { t!.plan(1); t!.plan(2); });
    |                                     ^^^^^^^^^^ Do not call \`t.plan()\` more than once in the same test.

`;

exports[`no-duplicate-plan > invalid(17): import test from 'node:test';\ntest(\"x\", (t: any) => { (t satisfies any).plan(1); (t satisfies any).plan(2); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", (t: any) => { (t satisfies any).plan(1); (t satisfies any).plan(2); });

`;

exports[`no-duplicate-plan > invalid(17): import test from 'node:test';\ntest(\"x\", (t: any) => { (t satisfies any).plan(1); (t satisfies any).plan(2); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("x", (t: any) => { (t satisfies any).plan(1); (t satisfies any).plan(2); });
    |                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^ Do not call \`t.plan()\` more than once in the same test.

`;

exports[`no-duplicate-plan > invalid(18): import test from 'node:test';\ntest(\"x\", (t: any) => { (<any>t).plan(1); (<any>t).plan(2); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", (t: any) => { (<any>t).plan(1); (<any>t).plan(2); });

`;

exports[`no-duplicate-plan > invalid(18): import test from 'node:test';\ntest(\"x\", (t: any) => { (<any>t).plan(1); (<any>t).plan(2); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("x", (t: any) => { (<any>t).plan(1); (<any>t).plan(2); });
    |                                           ^^^^^^^^^^^^^^^^ Do not call \`t.plan()\` more than once in the same test.

`;

exports[`no-duplicate-plan > invalid(19): import test from 'node:test';\ntest(\"parent\", (t: any) => { (t as any).test(\"child\", child => { child.plan(1); child.plan(2); }); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("parent", (t: any) => { (t as any).test("child", child => { child.plan(1); child.plan(2); }); });

`;

exports[`no-duplicate-plan > invalid(19): import test from 'node:test';\ntest(\"parent\", (t: any) => { (t as any).test(\"child\", child => { child.plan(1); child.plan(2); }); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("parent", (t: any) => { (t as any).test("child", child => { child.plan(1); child.plan(2); }); });
    |                                                                                 ^^^^^^^^^^^^^ Do not call \`child.plan()\` more than once in the same test.

`;

exports[`no-duplicate-plan > invalid(2): import test from 'node:test';\ntest(\"x\", t => { t.plan(1); t.plan(2); t.plan(3); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", t => { t.plan(1); t.plan(2); t.plan(3); });

`;

exports[`no-duplicate-plan > invalid(2): import test from 'node:test';\ntest(\"x\", t => { t.plan(1); t.plan(2); t.plan(3); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("x", t => { t.plan(1); t.plan(2); t.plan(3); });
    |                             ^^^^^^^^^ Do not call \`t.plan()\` more than once in the same test.

`;

exports[`no-duplicate-plan > invalid(2): import test from 'node:test';\ntest(\"x\", t => { t.plan(1); t.plan(2); t.plan(3); }); 3`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("x", t => { t.plan(1); t.plan(2); t.plan(3); });
    |                                        ^^^^^^^^^ Do not call \`t.plan()\` more than once in the same test.

`;

exports[`no-duplicate-plan > invalid(3): import test from 'node:test';\ntest.only(\"x\", t => { t.plan(1); t.plan(2); }); 1`] = `

  1 | import test from 'node:test';
  2 | test.only("x", t => { t.plan(1); t.plan(2); });

`;

exports[`no-duplicate-plan > invalid(3): import test from 'node:test';\ntest.only(\"x\", t => { t.plan(1); t.plan(2); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test.only("x", t => { t.plan(1); t.plan(2); });
    |                                  ^^^^^^^^^ Do not call \`t.plan()\` more than once in the same test.

`;

exports[`no-duplicate-plan > invalid(4): import test from 'node:test';\ntest(\"x\", {skip: false}, t => { t.plan(1); t.plan(2); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", {skip: false}, t => { t.plan(1); t.plan(2); });

`;

exports[`no-duplicate-plan > invalid(4): import test from 'node:test';\ntest(\"x\", {skip: false}, t => { t.plan(1); t.plan(2); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("x", {skip: false}, t => { t.plan(1); t.plan(2); });
    |                                            ^^^^^^^^^ Do not call \`t.plan()\` more than once in the same test.

`;

exports[`no-duplicate-plan > invalid(5): import test from 'node:test';\ntest(\"x\", context => { context.plan(1); context.plan(2); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", context => { context.plan(1); context.plan(2); });

`;

exports[`no-duplicate-plan > invalid(5): import test from 'node:test';\ntest(\"x\", context => { context.plan(1); context.plan(2); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("x", context => { context.plan(1); context.plan(2); });
    |                                         ^^^^^^^^^^^^^^^ Do not call \`context.plan()\` more than once in the same test.

`;

exports[`no-duplicate-plan > invalid(6): import {it} from 'node:test';\nit(\"x\", t => { t.plan(1); t.plan(2); }); 1`] = `

  1 | import {it} from 'node:test';
  2 | it("x", t => { t.plan(1); t.plan(2); });

`;

exports[`no-duplicate-plan > invalid(6): import {it} from 'node:test';\nit(\"x\", t => { t.plan(1); t.plan(2); }); 2`] = `

Message:
  1 | import {it} from 'node:test';
> 2 | it("x", t => { t.plan(1); t.plan(2); });
    |                           ^^^^^^^^^ Do not call \`t.plan()\` more than once in the same test.

`;

exports[`no-duplicate-plan > invalid(7): import {test} from 'node:test';\ntest(\"x\", t => { t.plan(1); t.plan(2); }); 1`] = `

  1 | import {test} from 'node:test';
  2 | test("x", t => { t.plan(1); t.plan(2); });

`;

exports[`no-duplicate-plan > invalid(7): import {test} from 'node:test';\ntest(\"x\", t => { t.plan(1); t.plan(2); }); 2`] = `

Message:
  1 | import {test} from 'node:test';
> 2 | test("x", t => { t.plan(1); t.plan(2); });
    |                             ^^^^^^^^^ Do not call \`t.plan()\` more than once in the same test.

`;

exports[`no-duplicate-plan > invalid(8): import * as nodeTest from 'node:test';\nnodeTest.test(\"x\", t => { t.plan(1); t.plan(2); }); 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.test("x", t => { t.plan(1); t.plan(2); });

`;

exports[`no-duplicate-plan > invalid(8): import * as nodeTest from 'node:test';\nnodeTest.test(\"x\", t => { t.plan(1); t.plan(2); }); 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
> 2 | nodeTest.test("x", t => { t.plan(1); t.plan(2); });
    |                                      ^^^^^^^^^ Do not call \`t.plan()\` more than once in the same test.

`;

exports[`no-duplicate-plan > invalid(9): import * as nodeTest from 'node:test';\nnodeTest.test.only(\"x\", t => { t.plan(1); t.plan(2); }); 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.test.only("x", t => { t.plan(1); t.plan(2); });

`;

exports[`no-duplicate-plan > invalid(9): import * as nodeTest from 'node:test';\nnodeTest.test.only(\"x\", t => { t.plan(1); t.plan(2); }); 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
> 2 | nodeTest.test.only("x", t => { t.plan(1); t.plan(2); });
    |                                           ^^^^^^^^^ Do not call \`t.plan()\` more than once in the same test.

`;
